# stan_cpp_rosenbrock

./: CMakeLists.txt  LICENSE  README.md  main.cpp  rosenbrock.hpp
